improve responsiveness (fix oversized legend on tablets)

--- a/src/app/map/map.page.scss
+++ b/src/app/map/map.page.scss
@@ -105,6 +105,9 @@
 
     .legend {
       width: 100%;
+      max-width: 450px;
+      margin: 0 auto;
+      padding: 0 0.6em;
     }
   }
 
